# openai_tt

./: LICENSE  Makefile  README.md  audio.py  main.py  pyproject.toml
